# mr4c-testing

./: .gitignore  CMakeLists.txt  README.md  messagingMaster.json  messagingWorker.json  mr4c-resolved-topics.properties  openmp.json  properties.json  runMessagingMaster.sh  runMessagingWorker.sh  runOpenMP.sh  runProperties.sh  runThreads.sh  site.json  threads.json
conf/: topics.properties
src/cpp/: MessagingMaster.cpp  MessagingWorker.cpp  Mr4cMessaging.cpp  Mr4cOpenMP.cpp  Mr4cProperties.cpp  Mr4cThreads.cpp
